(library
 (name pegasus)
 (libraries
  aws-s3-lwt
  caqti
  caqti-lwt
  caqti-lwt.unix
  caqti-driver-sqlite3
  cohttp
  cohttp-lwt-unix
  core_unix
  dns-client-lwt
  dream
  emile
  frontend
  hermes
  hermes_cli
  html_of_jsx
  ipld
  kleidos
  letters
  lexicons
  lwt
  lwt.unix
  mist
  re
  safepass
  server-reason-react.reactDom
  timedesc
  uri
  uuidm
  uuseg
  uuseg.string
  webauthn
  yojson
  hermes_ppx
  lwt_ppx
  ppx_deriving_yojson.runtime
  ppx_rapper_lwt)
 (preprocess
  (pps hermes_ppx html_of_jsx.ppx lwt_ppx ppx_deriving_yojson ppx_rapper)))

(include_subdirs qualified)
